--- a/D2.3/D2_3.tex
+++ b/D2.3/D2_3.tex
@@ -13,7 +13,7 @@
 % The document metadata is defined below
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.3~--~01/01}
+\reportnum{OETCS/WP2/D2.3~--~01/02}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -25,7 +25,7 @@
 \subtitle{Definition of the overall process for the formal description of ETCS and the rail system it works in}
 
 %set the date of the report here
-\date{May 2013}
+\date{June 2013}
 
 %define a list of authors and their affiliation here
 
@@ -108,6 +108,7 @@ Version &  Date & Author(s) & Justification  \\
 & & & Review comments on 00.01 \\
 \hline  
 01.02 & 27/05/2013 & M. Petit-Doche &  Review comments on 01.01 \\
+& & & Update of D2.6 requirements ID \\
 \hline  
 \end{tabular}
 
