--- a/D2.3/intro.tex
+++ b/D2.3/intro.tex
@@ -21,7 +21,7 @@ The purpose of this model is:
 (by the OpenETCS project team and by industrial actors);
 \end{itemize}
 
-The output is a model, at least semi-formal, understandable by many formal approaches (SCADE,
+The output is a model, at least semi-formal, which can be extended to many formal approaches (SCADE,
 Simulink, B tools, OpenETCS tool chain…) that can be given to all railway actors, and
 if possible associated to SRS documents in the ERA database.
 
@@ -122,11 +122,14 @@ of ETCS in Levels 1 \& 2}
 \item[QA] Quality Analysis
 \item[RBC] Radio Block Center
 \item[RTM] RunTime Model
+\item[semi-formal language] Language with an unambiguous mathematical logical syntax
 \item[SIL] Safety Integrity Level
 \item[SRS] System Requirement Specification
 \item[SSHA] Sub-System Hazard Analysis
 \item[SSRS] Sub-System Requirement Specification
+\item[strictly-formal language] Language with an unambiguous mathematical logical syntax and an unambiguous mathematical semantic
 \item[SW] Software
 \item[THR] Tolerable Hazard Rate
 \item[V\&V] Verification \& Validation
+\item[Vital]	Artifacts involved to ensure safety of the system
 \end{description}
