Correction for Open remarks from MB (see issue 75).

--- a/D2.3/D2_3.tex
+++ b/D2.3/D2_3.tex
@@ -77,7 +77,7 @@ Last version reviewed & 01.01 \\
 \hline
 Main reviewers & S. Baro (SNCF) \\
 & P. Mahlmann (DB), B. Hekele (DB)\\
-& U. Stainke (Siemens AG) \\
+& U. Steinke (Siemens AG) \\
 & S. Pinte (ERTMS Solutions) \\
 & H. Hungar (DLR), M. Behrens (DLR) \\
 & J. Welte ( TU-BS) \\
@@ -91,7 +91,7 @@ Main reviewers & S. Baro (SNCF) \\
 \hline
   &  Name & Role & Date   \\
 \hline  
-Written by    &  Marielle Petit-Doche & WP2-D2.3 Sub-Task Leader  & \\
+Written by    &  Marielle Petit-Doche & WP2-T2.3 Sub-Task Leader  &  June 2013\\
 \hline
 Approved by & Gilles Dalmas & WP2 leader & \\
 \hline
