--- a/D2.3/process_def.tex
+++ b/D2.3/process_def.tex
@@ -123,7 +123,7 @@ as well as the location of the boundary between the two
 \item to classify Vital versus Non-Vital items (functions, input/output, requirements, ...) from the safety analysis results (see R-WP2/D2.6-02-046),
 \end{itemize}
 
-However, the SSRS shall be compliant with the input documents of TSI (SUBSET-026, FIS, ...) (see R-WP2/D2.6-02-045, R-WP2/D2.6-02-045.02.06 and R-WP2/D2.6-02-045.04)
+However, the SSRS shall be compliant with the input documents of TSI (SUBSET-026, FIS, ...) (see R-WP2/D2.6-02-045, R-WP2/D2.6-02-045.02.06 and R-WP2/D2.6-02-045.04) and shall cover all the requirements and the function of the input documents. If a function or a requirement shall not been taken into account in the sequel of the of the process, a justification shall be clearly given.
 
 It shall also facilitate safety, design, verification, validation and maintenance activities: full traceability between SRS and SSRS shall be provided (see R-WP2/D2.6-02-045.05).
 
