Review remarks incorporated.

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -12,7 +12,7 @@
 % The document metadata is defined below
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~00.02}
+\reportnum{OETCS/WP2/D2.4~--~00.03}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -25,7 +25,7 @@
 Intermediate version}
 
 %set the date of the report here
-\date{May 2013}
+\date{June 2013}
 
 %define a list of authors and their affiliation here
 
@@ -41,8 +41,8 @@ Intermediate version}
 
 
 % define the coverart
-\coverart[width=350pt]{chart}
-
+\coverart[width=350pt]{openETCS_EUPL}
+ 
 %define the type of report
 \reporttype{Definition}
 
@@ -69,7 +69,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 00.02 \\
+Document version & 00.03 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -82,7 +82,10 @@ Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
 \hline
 Last version reviewed & 00.01 \\
 \hline
-Main reviewers & Sylvain Baro, Bernd Hekele \\
+Main reviewers & S. Baro (SNCF) \\
+& P. Mahlmann (DB), B. Hekele (DB)\\
+& H. Hungar (DLR), M. Behrens (DLR) \\
+& J. Welte ( TU-BS) \\
 \hline
 \end{tabular}
 
@@ -92,7 +95,7 @@ Main reviewers & Sylvain Baro, Bernd Hekele \\
 \hline
   &  Name & Role & Date   \\
 \hline  
-Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & may 2013 \\
+Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & June 2013 \\
 & David Mentré & & \\
 & Matthias Güdemann & & \\
 \hline
@@ -110,6 +113,8 @@ Version &  Date & Author(s) & Justification  \\
 \hline  
 00.02 & 2013-05-16 & D. Mentré &  Incorporation of formal reviews in
 the document \\
+\hline  
+00.03 & 03/05/2013 & M. Petit-Doche &  Remaining remarks of formal reviews \\
 \hline  
 
 \end{tabular}
