--- a/D2.4/formal_intro.tex
+++ b/D2.4/formal_intro.tex
@@ -73,7 +73,7 @@ much less costly than in later development phases.
 The second benefit is to enable the verification of some properties in
 an exhaustive way. Therefore avoidance of certain kinds of bugs can be
 guaranteed. Of course, such guarantee can only be obtained if the
-formal method is used along some specific way and on a well delimited
+formal approach is used along some specific way and on a well delimited
 part of the software and system (for example one cannot guarantee
 properties on variables outside program boundary).
 
@@ -92,7 +92,7 @@ without the need to re-verify parts not impacted by the change.
 \subsection{How to use formal approaches?}
 
 In the design and development of a system using an approach based on
-formal methods, there are two orthogonal aspects to consider: at which
+formal languages, there are two orthogonal aspects to consider: at which
 stage (or stages) in the development cycle the formal approach will be
 used and how it will be used, i.e., choice of approach, technical
 realization.
