--- a/D2.4/formal_vnv.tex
+++ b/D2.4/formal_vnv.tex
@@ -19,7 +19,7 @@ section.
 
 \subsection{Formal approaches for verification}
 
-Ensuring safety properties using formal methods starts in a similar
+Ensuring safety properties using formal approches starts in a similar
 way to classical approaches. A safety analysis will produce the
 properties that should be ensured to guarantee safe operation of the
 system.
@@ -62,7 +62,7 @@ This is done using non formal techniques:
 \item Test.
 \end{itemize}
 
-\subsection{Formal methods for safety}
+\subsection{Formal approaches for safety}
 
 \begin{comment}
 proof of safety requirements, static analysis, safety analysis, traceability,...
