--- a/D2.4/intro.tex
+++ b/D2.4/intro.tex
@@ -4,7 +4,7 @@ The purpose of this document is to describe, for the OpenETCS project, the means
 
 However the benchmark activities are not yet achieved in WP7, such the definition of the methods can not yet be done.
 
-For the intermediate version of the document, we propose a description of the benefits of formal methods in the design, development, verification and validation of critical systems.
+For the intermediate version of the document, we propose a description of the benefits of formal approaches in the design, development, verification and validation of critical systems.
 
 For the final version, the document proposes the method to  follow during the OpenETCS project according to  the OpenETCS process  and requirements defined in D2.3  and D2.6.
 
@@ -21,7 +21,7 @@ processing systems -- Software for railway control and protection systems}
 processing systems –- Safety related electronic systems for signalling}
 \item FPP --- \emph{Project Outline Full Project Proposal Annex OpenETCS} -- v2.2
 \item SUBSET-026 3.3.0 --- \emph{System Requirement Specification}
-\item SUBSET-076-x 2.3.y --- Test related ERTMS documentation
+\item SUBSET-076-x 2.3.y --- \emph{Test related ERTMS documentation} (this version is related to version 2.3.y  of SUBSET-026)
 \item SUBSET-088 2.3.0 --- \emph{ETCS Application Levels 1 \& 2 - Safety Analysis}
 \item SUBSET-091 2.5.0 --- \emph{Safety Requirements for the Technical Interoperability
 of ETCS in Levels 1 \& 2}
