Last remark updated. Bibtex format.

--- a/D2.3/D2_3.tex
+++ b/D2.3/D2_3.tex
@@ -43,7 +43,7 @@
 
 
 \begin{abstract}
-This document gives a description of the process to be applied in the OpenETCS project. In the first part, the document gives a description of the specification and design activities for a critical system. The second part presents an abstract description of the case study issued from SUBSET-026.
+This document gives a description of the process to be applied in the OpenETCS project. In the first part, the document gives a description of the specification and design activities for a critical system. The second part presents an abstract description of the case study issued from SUBSET-026 \cite{unisig_subset-026_2012}.
 
 \end{abstract}
 
@@ -165,24 +165,8 @@ Version &  Date & Author(s) & Justification  \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%% Bibliography
-\nocite{*}
-\bibliographystyle{unsrt}
-\bibliography{erdc}
-\bibliography{process}
 
 
-
-% \begin{thebibliography}{9}
-
-% \bibitem{lamport94}
-  % Leslie Lamport,
-  % \emph{\LaTeX: A Document Preparation System}.
-  % Addison Wesley, Massachusetts,
-  % 2nd Edition,
-  % 1994.
-
-% \end{thebibliography}
 
 %===================================================
 %Do NOT change anything below this line
