--- a/D2.3/D2_3.tex
+++ b/D2.3/D2_3.tex
@@ -13,7 +13,7 @@
 % The document metadata is defined below
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.3~--~01/02}
+\reportnum{OETCS/WP2/D2.3~--~02/00}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -64,7 +64,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.3\\
 \hline
 Document title & Definition of the overall process for the formal description of ETCS and the rail system it works in \\
-Document version & 01.02 \\
+Document version & 02.00 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel) Matthias Güdemann (Systerel) \\
 \hline
 \end{tabular}
@@ -109,6 +109,8 @@ Version &  Date & Author(s) & Justification  \\
 \hline  
 01.02 & 27/05/2013 & M. Petit-Doche &  Review comments on 01.01 \\
 & & & Update of D2.6 requirements ID \\
+\hline  
+02.00 & 10/06/2013 & M. Petit-Doche &  Closure of issue 40-41-75 \\
 \hline  
 \end{tabular}
 
