Updated template (new design including founder logos)

--- a/D2.1/dkn_2012-12-23_Report-WP2-T2-1-1_23_jw.tex
+++ b/D2.1/dkn_2012-12-23_Report-WP2-T2-1-1_23_jw.tex
@@ -49,7 +49,7 @@
   eMail: openetcs@iva.ing.tu-bs.de}
 
 % define the coverart
-\coverart[width=350pt]{chart}
+\coverart[width=350pt]{openETCS_EUPL}
 
 %define the type of report
 \reporttype{Preliminary Report}
